--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# App design
+public/design
+
+#readme
+style-guide.md
+README-template.md
 
 # dependencies
 /node_modules
