CountyCard created to visualizate each country and file index.css created to fix bugs of the fonts

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,7 +21,8 @@
     "no-unused-expressions": [2, {
       "allowShortCircuit": true,
       "allowTernary": true
-    }]
+    }],
+    "react/prop-types": [0]
   },
   "settings": {
     "import/resolver": {
