--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,6 +18,7 @@
   },
   "plugins": ["react"],
   "rules": {
+    "no-unused-vars": [1],
     "no-unused-expressions": [2, {
       "allowShortCircuit": true,
       "allowTernary": true
