--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "agent-base": "^6.0.2",
+    "env-cmd": "^10.1.0",
     "material-icons": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
